Avoid overflow

--- a/_includes/amigavision.css
+++ b/_includes/amigavision.css
@@ -96,6 +96,7 @@ pre {
   background-color: rgb(239, 241, 242);  
   padding: 16px;
   margin-left: -16px;
+  padding-right: 32px;
 }
 
 code {
